--- a/assets/templates/add_contact.html
+++ b/assets/templates/add_contact.html
@@ -16,14 +16,16 @@
             <img src="../assets/icons/empty-user-avatar.png">
         </div>
         <form class="add-contact-card-form" id="changeContact">
-            <div><input type="text" id="contactNameInput" placeholder="Name" required><img
-                    src="../assets/icons/person-icon.svg">
-            </div>
-            <div><input type="email" id="contactMailInput" placeholder="Email" required><img
-                    src="../assets/icons/mail-icon.svg">
-            </div>
-            <div><input type="tel" id="contactPhoneInput" placeholder="Phone" required><img
-                    src="../assets/icons/call-icon.svg">
+            <div class="contact-form-area">
+                <div><input type="text" id="contactNameInput" placeholder="Name" required><img
+                        src="../assets/icons/person-icon.svg">
+                </div>
+                <div><input type="email" id="contactMailInput" placeholder="Email" required><img
+                        src="../assets/icons/mail-icon.svg">
+                </div>
+                <div><input type="tel" id="contactPhoneInput" placeholder="Phone" required><img
+                        src="../assets/icons/call-icon.svg">
+                </div>
             </div>
             <div id="addContactFormActions">
 
