--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div id="formOptions">
-                <button type='button' onclick="emptyAddTaskForm()" class="alternative-button">Clear</button>
+                <button type='button' onclick="emptyAddTaskForm()" class="alternative-button button-create-contact">Clear</button>
                 <button type='button' id="createTask" onclick="submitTask()" class="default-button">
                     Create Task</button>
             </div>
