--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1 {
     font-size: 61px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
-    margin: 0;
+    margin-bottom: 8px;
 }
 
 h2 {
