--- a/css/board.css
+++ b/css/board.css
@@ -1,7 +1,3 @@
-.board-section::-webkit-scrollbar {
-    display: none !important;
-}
-
 .board-section {
     position: absolute;
     left: 0;
@@ -12,6 +8,10 @@
     font-family: 'Inter', sans-serif;
     overflow: hidden;
     overflow-y: scroll;
+}
+
+.board-section::-webkit-scrollbar {
+    display: none !important;
 }
 
 .board-section .head-section {
@@ -154,6 +154,12 @@
 
 .scroll-area {
     height: 1000px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.scroll-area::-webkit-scrollbar{
+    display: none;
 }
 
 .board-section .task-area {
