--- a/assets/templates/add_contact.html
+++ b/assets/templates/add_contact.html
@@ -6,25 +6,25 @@
     <div class="add-contact-card" id="contactCard">
         <div class="add-contact-card-header">
             <div class="add-contact-card-header-content">
-                <img src="../assets/image/join-logo-white.svg">
+                <img src="./assets/image/join-logo-white.svg">
                 <h1 id='contactTemplateTitle'></h1>
                 <h4>Tasks are better with a team!</h4>
                 <div class="add-contact-blue-line"></div>
             </div>
         </div>
         <div id="contactCredentials">
-            <img src="../assets/icons/empty-user-avatar.png">
+            <img src="./assets/icons/empty-user-avatar.png">
         </div>
         <form class="add-contact-card-form" id="changeContact">
             <div class="contact-form-area">
                 <div><input type="text" id="contactNameInput" placeholder="Name" required><img
-                        src="../assets/icons/person-icon.svg">
+                        src="./assets/icons/person-icon.svg">
                 </div>
                 <div><input type="email" id="contactMailInput" placeholder="Email" required><img
-                        src="../assets/icons/mail-icon.svg">
+                        src="./assets/icons/mail-icon.svg">
                 </div>
                 <div><input type="tel" id="contactPhoneInput" placeholder="Phone" required><img
-                        src="../assets/icons/call-icon.svg">
+                        src="./assets/icons/call-icon.svg">
                 </div>
             </div>
             <div id="addContactFormActions">
@@ -32,7 +32,7 @@
             </div>
         </form>
         <img id='closeAddContactCardIcon' onclick="removeElementsByPartialClassName('add-contact')"
-            src="../assets/icons/x-icon.svg">
+            src="./assets/icons/x-icon.svg">
 
     </div>
 </div>
