--- a/css/board.css
+++ b/css/board.css
@@ -193,6 +193,7 @@
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.08);
     transition: transform 0.3s ease;
     box-sizing: border-box;
+    position: relative;
 }
 
 .board-section .task-card:hover {
@@ -340,6 +341,8 @@
 
 .board-section .card-category-top-section img {
     cursor: pointer;
+    width: 32px;
+    height: 32px;
 }
 
 .board-section .card-category-top-section:hover img {
@@ -487,6 +490,61 @@
     display: block;
 }
 
+.board-section .move {
+    font-size: 15px;
+    color: #29ABE2; 
+    cursor: pointer;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.board-section .task-moveTo {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.board-section .moveTo-img {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.board-section .task-headline {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.board-section .moveTo-h4 {
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.board-section .current-category {
+    opacity: 30%;
+}
+
+.board-section .move-categorys {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+.board-section .move-task-button {
+    width: 100%;
+    padding: 6px 0;
+    background-color: #2A3647;
+    color: #FFFFFF;
+    border-radius: 8px;
+    text-align: center;
+}   
+
 @media(max-width: 1356px) {
     .board-section {
         margin: 96px 16px 0 260px;
@@ -572,7 +630,21 @@
         margin-top: auto;
         min-height: 28px;
     }
-}
+
+    #addTaskCard {
+        max-width: 96%;
+    }
+
+    .board-section .plus-icon-contacts {
+        display: none;
+    }
+ }
+
+ @media (min-width: 1250px) {
+    .board-section .move {
+        display: none;
+    }
+ }
 
 @media(max-width: 1050px) {
     .board-section .addTask-responive-img {
@@ -717,11 +789,6 @@
     position: relative;
 }
 
-@media(max-width: 1250px) {
-    #addTaskCard {
-        max-width: 96%;
-    }
-}
 
 @keyframes rightToCenter {
     from {
