update add task

--- a/assets/templates/add_contact.html
+++ b/assets/templates/add_contact.html
@@ -23,7 +23,7 @@
                 <div><input type="email" id="contactMailInput" placeholder="Email" required><img
                         src="./assets/icons/mail-icon.svg">
                 </div>
-                <div><input type="tel" id="contactPhoneInput" placeholder="Phone" required><img
+                <div><input type="number" id="contactPhoneInput" placeholder="Phone" required><img
                         src="./assets/icons/call-icon.svg">
                 </div>
             </div>
