--- a/css/add_task.css
+++ b/css/add_task.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    max-width: 1280px;
 }
 
 #addTaskContainer .add-task {
