--- a/css/add_task-responsiv.css
+++ b/css/add_task-responsiv.css
@@ -22,6 +22,10 @@
     #addTaskContainer {
         align-items: center;
     }
+
+    #addTaskContainer h1 {
+        margin: 28px 64px 28px 64px;
+    }
 }
 
 @media (max-width: 1000px) {
