--- a/css/board.css
+++ b/css/board.css
@@ -522,6 +522,7 @@
 .board-section .moveTo-h4 {
     font-weight: 700;
     margin-bottom: 10px;
+    margin-top: -14px;
 }
 
 .board-section .move-categorys {
@@ -604,7 +605,7 @@
         min-width: 220px;
         width: 220px;
         box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.08);
-        min-height: 222px;
+        min-height: 235px;
     }
 
     .board-section .task-card:hover {
