--- a/css/add_task.css
+++ b/css/add_task.css
@@ -459,7 +459,7 @@
     justify-content: flex-end;
     position: relative;
     gap: 10px;
-    margin: 64px;
+    margin: 0 64px;
 }
 
 /* Animated Icons */
