add task update

--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -46,7 +46,7 @@
 
                     <div class="task-date">
                         <label for="newTaskDate">Due Date</label>
-                        <input type="date" id="newTaskDate" min="2020-01-01" required>
+                        <input onclick="setMinDate()" type="date" id="newTaskDate" required>
                     </div>
 
                     <div class="task-priority">
