--- a/css/board.css
+++ b/css/board.css
@@ -492,7 +492,7 @@
 
 .board-section .move {
     font-size: 15px;
-    color: #29ABE2; 
+    color: #29ABE2;
     cursor: pointer;
     height: 100%;
     display: flex;
@@ -540,7 +540,7 @@
     color: #FFFFFF;
     border-radius: 8px;
     text-align: center;
-}  
+}
 
 .board-section .current-category {
     opacity: 30%;
@@ -597,7 +597,7 @@
 
     .board-section .task-section-responsive {
         display: flex;
-        padding: 6px 0 6px 0;
+        padding: 16px 0 6px 0;
         font-size: 27px;
     }
 
@@ -618,6 +618,23 @@
         padding: 13px 0 30px 0;
         border-radius: 0;
         min-width: 150px;
+    }
+
+    .creat-task-area::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+        background-color: #F5F5F5;
+    }
+
+    .creat-task-area::-webkit-scrollbar {
+        width: 12px;
+        background-color: #F5F5F5;
+    }
+
+    .creat-task-area::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+        background-color: #d6d6d6;
     }
 
     h1 {
@@ -649,16 +666,16 @@
         display: none;
     }
 
-    .board-section .plus-icon{
+    .board-section .plus-icon {
         display: none;
     }
- }
+}
 
- @media (min-width: 1250px) {
+@media (min-width: 1250px) {
     .board-section .move {
         display: none;
     }
- }
+}
 
 @media(max-width: 1050px) {
     .board-section .addTask-responive-img {
