--- a/css/contact.css
+++ b/css/contact.css
@@ -214,19 +214,43 @@ h4 {
     gap: 26px;
 }
 
-.responsive-menu-container {
+.responsive-contact-menu-container {
     display: flex;
     flex-direction: column;
     padding: 10px;
     background-color: #FFF;
+    position: fixed;
     border-radius: 20px 20px 0px 20px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     width: 96px;
-    opacity: 0;
-    right: -200px;
-    bottom: 98px;
-    transition: right 0.3s ease-in-out, opacity 0.3s ease-in-out, width 0.3s ease-in-out;
-    position: fixed;
+    /* opacity: 0; */
+    right: 0px;
+    bottom: 198px;
+    animation: letAppear 0.5s ease-in-out;
+}
+
+.let-contact-menu-disappear {
+    animation: letDisappear 0.5s ease-in-out;
+}
+
+@keyframes letDisappear{
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes letAppear {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .responsive-menu {
