add task form correction

--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -1,7 +1,7 @@
 <body onload="includeHTML(1);initAddTasks();">
 
     <div include-html="./assets/templates/add_contact.html"></div>
-    <form id="addTaskContainer">
+    <form id="addTaskContainer" onsubmit="submitTask(); return false">
         <div class="add-task">
             <h1 id="addTaskTitle">Add Task</h1>
             <div class="task-input-container">
@@ -10,12 +10,10 @@
                         <label for="newTaskTitle">Title</label>
                         <input type="text" id="newTaskTitle" placeholder="Enter a title" required>
                     </div>
-
                     <div class="task-description">
                         <label for="newTaskDescription">Description</label>
                         <textarea id="newTaskDescription" placeholder="Enter a Description" required></textarea>
                     </div>
-
                     <div class="task-assigned-contacts">
                         <label for="newTaskAssignedContact">Assigned to</label>
                         <div id="newTaskAssignedContact">
@@ -24,48 +22,37 @@
                             <img src="./assets/icons/arrow-drop.svg" class="dropdown-icon" alt="Dropdown Icon">
                             <div id="assignedContactsDropDownContent">
                                 <div id="selectAssignedContactList" class="contact-list">
-
                                 </div>
                                 <div class='add-contact-button-container'>
                                     <button type="button" class="default-button dropdown-button"
                                         onclick="includeContactHTML('addContact')">Add new contact
                                         <img src='./assets/icons/person-add.svg'>
                                     </button>
-
                                 </div>
                             </div>
-
                         </div>
-
                         <div id='assignedContactList'></div>
                     </div>
-
                 </div>
-
                 <div class="task-input-col task-input-not-first-col">
-
                     <div class="task-date">
                         <label for="newTaskDate">Due Date</label>
                         <input onclick="setMinDate()" type="date" id="newTaskDate" required>
                     </div>
-
                     <div class="task-priority">
                         <label for="newTaskPriority">Prio</label>
-
-
-
                         <div id="newTaskPriority">
                             <label>
-                                <input type="radio" name="priority" value="urgent" 
-                                onclick="setTaskPrio('urgent')" required>
+                                <input required type="radio" name="priority" value="urgent" 
+                                onclick="setTaskPrio('urgent')">
                                 <div id="urgentButton" class="priority-button">
                                     Urgent
                                     <img id="urgentIcon" class="prio-icon" src="./assets/icons/prio-urgent.svg">
                                 </div>
                             </label>
                             <label>
-                                <input type="radio" name="priority" value="medium" 
-                                onclick="setTaskPrio('medium')" required>
+                                <input required type="radio" name="priority" value="medium" 
+                                onclick="setTaskPrio('medium')">
                                 <div id="mediumButton" class="priority-button">
                                     Medium
                                     <img id="mediumIcon" class="prio-icon"
@@ -73,8 +60,8 @@
                                 </div>
                             </label>
                             <label>
-                                <input type="radio" name="priority" value="low" 
-                                onclick="setTaskPrio('low')" required>
+                                <input required type="radio" name="priority" value="low" 
+                                onclick="setTaskPrio('low')">
                                 <div id="lowButton" class="priority-button">
                                     Low
                                     <img id="lowIcon" class="prio-icon"
@@ -83,8 +70,6 @@
                             </label>
                         </div>
                     </div>
-
-
                     <div class="task-category">
                         <label for="selectCategory">Category</label>
                         <div class="category-select">
@@ -98,11 +83,6 @@
                             <img src="./assets/icons/arrow-drop.svg" class="dropdown-icon" alt="Dropdown Icon">
                         </div>
                     </div>
-
-
-
-
-
                     <div class="task-subtask">
                         <label for="newTaskSubTask">Subtasks</label>
                         <div class="subtask-field">
@@ -130,7 +110,7 @@
             </div>
             <div id="formOptions">
                 <button type='button' onclick="emptyAddTaskForm()" class="alternative-button">Clear</button>
-                <button type='button' id="createTask" onclick="submitTask()" class="default-button">
+                <button type='submit' id="createTask" class="default-button">
                     Create Task</button>
             </div>
         </div>
